--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -4,9 +4,10 @@ import "../../styles/tachyons.css";
 import "../../styles/style.css";
 import "../../styles/links.css";
 import { getSlugFromPath } from "../../lib/utils";
+import Layout from "../../components/Layout.astro";
 
 export async function getStaticPaths() {
-  const allPosts = (await Astro.glob("../../content/old_posts/*.md")) as any;
+  const allPosts = (await Astro.glob("../../content/posts/*.md")) as any;
 
   console.log(allPosts);
   console.log(allPosts[0].file);
@@ -31,11 +32,7 @@ export async function getStaticPaths() {
 const { post } = Astro.props as any;
 ---
 
-<head>
-  <meta charset="utf-8" />
-</head>
-
-<div>
+<Layout title={post.frontmatter.title} description="hi">
   <header class="flex justify-between items-center pb3 mb4 bb b--c-main">
     <h1 class="f3 c-second ma0 pb0 fw4 roboto w-70">
       {post.frontmatter.title}
@@ -50,4 +47,4 @@ const { post } = Astro.props as any;
   <div class="textBody">
     <post.Content />
   </div>
-</div>
+</Layout>
