--- a/src/components/Layout.astro
+++ b/src/components/Layout.astro
@@ -4,6 +4,8 @@ import "../styles/tachyons.css";
 import "../styles/style.css";
 import "../styles/links.css";
 
+type Props = { title: string; description: string; children: any };
+
 const { title, description } = Astro.props;
 const navStyle = "roboto c-main";
 const descriptionStyle = "f6 roboto pt1 mt2 c-second";
