--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -1,23 +1,12 @@
 ---
-import { getSlugFromPath } from "../../lib/utils";
+import { getSlugFromPath, getDateFormats } from "../../lib/utils";
 import Layout from "../../components/Layout.astro";
-import type {
-  InferGetStaticParamsType,
-  InferGetStaticPropsType,
-  GetStaticPaths,
-} from "astro";
 
-export const getStaticPaths = (async () => {
+export const getStaticPaths = async () => {
   const allPosts = (await Astro.glob("../../content/posts/*.md")) as any;
-
-  console.log(allPosts);
-  console.log(allPosts[0].file);
-  console.log(getSlugFromPath(allPosts[0].file));
 
   const paths = allPosts.map((post: any) => {
     const slug = getSlugFromPath(post.file);
-
-    console.log(post.frontmatter.title);
 
     return {
       params: {
@@ -28,24 +17,23 @@ export const getStaticPaths = (async () => {
   });
 
   return paths;
-}) satisfies GetStaticPaths;
-
-type Params = InferGetStaticParamsType<typeof getStaticPaths>;
-type Props = InferGetStaticPropsType<typeof getStaticPaths>;
+};
 
 const { post } = Astro.props as any;
+const { title, date, description } = post.frontmatter!;
+const { displayDate, displayDateSmall } = getDateFormats(date);
 ---
 
-<Layout title={post.frontmatter.title} description="hi">
-  <header class="flex justify-between items-center pb3 mb4 bb b--c-main">
+<Layout title={title} description={description}>
+  <header class="flex justify-between items-end pb3 mb4 bb b--c-main">
     <h1 class="f3 c-second ma0 pb0 fw4 roboto w-70">
-      {post.frontmatter.title}
+      {title}
     </h1>
     <p class="post-date-small f5 fw4 roboto pa0 ma0 c-second w-30 tr">
-      {post.frontmatter.displayDateSmall}
+      {displayDateSmall}
     </p>
     <p class="post-date f5 fw4 roboto pa0 ma0 c-second w-30 tr">
-      {post.frontmatter.displayDate}
+      {displayDate}
     </p>
   </header>
   <div class="textBody">
