--- a/src/pages/highlights/[...slug].astro
+++ b/src/pages/highlights/[...slug].astro
@@ -3,7 +3,7 @@ import { getSlugFromBookTitle, getDateFormats } from "../../lib/utils";
 import Layout from "../../components/Layout.astro";
 
 export const getStaticPaths = async () => {
-  const allJson = (await Astro.glob("../../content/highlights/*.json")) as any;
+  const allJson = (await Astro.glob("../../content/highlights/*")) as any;
 
   const paths = allJson.map((post: any) => {
     const slug = getSlugFromBookTitle(post.default[0].book);
