target blank for newsletter link

--- a/src/components/Layout.astro
+++ b/src/components/Layout.astro
@@ -49,6 +49,7 @@ const themeToggleId = "color-theme-toggle";
               <a
                 href="https://www.newsletter.kahvipatel.com"
                 class={navStyle.concat(" mr2")}
+                target="_blank"
               >
                 newsletter</a
               >
