filtering out unpublished

--- a/src/components/Layout.astro
+++ b/src/components/Layout.astro
@@ -7,6 +7,7 @@ import ColorThemeScript from "./ColorThemeScript.astro";
 type Props = { title: string; description: string; children: any };
 
 const { title, description } = Astro.props;
+const newsletterUrl = "https://www.newsletter.kahvipatel.com";
 const navStyle = "roboto c-main";
 const descriptionStyle = "f6 roboto pt1 mt2 c-second";
 const themeToggleId = "color-theme-toggle";
@@ -57,7 +58,7 @@ const themeToggleId = "color-theme-toggle";
             </p>
             <p>
               <a
-                href="https://www.newsletter.kahvipatel.com"
+                href={newsletterUrl}
                 class={navStyle.concat(" mr2")}
                 target="_blank"
               >
