Replace Contentful runtime with local book shelf JSON

--- a/src/pages/book-shelf.astro
+++ b/src/pages/book-shelf.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from "../components/Layout.astro";
 import BookList from "../components/BookList";
-import { getBookShelfData } from "../lib/source-contentful";
+import { getBookShelfData } from "../lib/source-local";
 
 const data = await getBookShelfData();
 
